# ordering-agent

./: .env.example  .gitignore  README.md  agent.sh  create_test_user.py  install.sh  main.py  package-lock.json  package.json  process.json  pyproject.toml  requirements.txt  test_db.py  twilio_webhook.js
app/: __init__.py  auth_api.py  database.py  handler.py  init_db.py  llm.py  llm_with_func_calling.py  migrate_addons.py  order_llm.py  prompts.py  server.py  tools.py  twilio_service.py  user_model.py
app/agent/: __init__.py  handler.py  memory.py  order_agent.py  order_llm.py  prompts.py  tools.py  utils.py
app/db/: database.py  init_db.py
app/db_operations/: __init__.py  database.py  init_db.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/api/users/: route.ts
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/app/dashboard/customers/: page.tsx
frontend/src/app/dashboard/menu/: page.tsx
frontend/src/app/dashboard/orders/: page.tsx
frontend/src/app/dashboard/settings/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/components/: OrderViewModal.tsx
frontend/src/components/ui/: separator.tsx  switch.tsx  tabs.tsx  textarea.tsx
frontend/src/lib/: animations.ts  auth-provider.tsx  schemas.ts  utils.ts
frontend/src/lib/api/: api-service.ts  types.ts
nbs/: test.ipynb
old/: database.py  init_db.py  order_llm.py  user_model.py
twilio_webhook/: README.md  main.js  package.json
(+4 files in other folders)
